--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
             </tr>
         </table>
         <h3>My Hobbies</h3>
-        <ol class="hobbies">
+        <ul class="hobbies">
             <li><a href="https://www.youtube.com/watch?v=SK9YpwF7ImM">Gaming</a></li>
             <li><a href="https://www.youtube.com/watch?v=mRrIqpANihc">Drawing</a></li>
             <li><a href="https://www.youtube.com/watch?v=Mv41gjlRsbI">Reading</a></li>
             <li><a href="https://www.youtube.com/watch?v=pw2GtUhNoCM">Swimming</a></li>
             <li><a href="https://www.youtube.com/watch?v=RZafB0kLufc">Rizzing up GF</a></li>
             <li><a href="https://www.youtube.com/watch?v=qxihYhf3tcs">Being sus</a></li>
-        </ol>
+        </ul>
       </div>
     </div>
     <hr>
